--- a/python_coder/spider.conf
+++ b/python_coder/spider.conf
@@ -1,8 +1,10 @@
 [spider]
 url_list_file = ./urls
 output_directory = ./output
-max_depth = 1
-crawl_interval = 0.3 
-crawl_timeout = 2
-target_url = .*.(gif|png|jpg|bmp)$ 
-thread_count = 8
+max_depth = 2
+crawl_interval = 1
+crawl_timeout = 5
+#target_url = .*.(gif|png|jpg|bmp)$
+#target_url = (https://www.9game.cn/dzpd/[0-9]+\.html$)|(https://www.9game.cn/dzpd/gonglue.+)
+target_url = (https://www.9game.cn/dzpd/[0-9]+\.html$)
+thread_count = 1
